<resources>
    <string name="app_name">Sharing App</string>
    <string name="menu_home">Home</string>
    <string name="menu_fav">Favorites</string>
    <string name="menu_profile">Profile</string>
    <string name="search_post">Search</string>
    <string name="name">Frisnadi Nurul Huda</string>
    <string name="email">Frisnadi1@gmail.com</string>
    <string name="back">Back</string>
    <string name="upload">Upload</string>
</resources>