...
                ) {
                    if (uiState.data.isNotEmpty()) {
                        ListComponent(
                            postPhoto = uiState.data,
                            modifier = modifier
                                .padding(it)
                                .testTag("PostList"),
                            navigateToDetail = navigateToDetail,
                            onClick = { postId ->
                                viewModel.addPostToFav(postId)
                            }
                        )
                    } else {
...
